# pdf-foobar

./: .gitignore  ChangeLog.md  README.md  default.nix  deploy.sh  miso-ghcjs.nix  mupdf.nix  pdf-foobar-backend.nix  pdf-foobar-frontend.nix  pdf-foobar.cabal  pdf-foobar.nix
assets/: style.css
backend/: Main.hs
frontend/: Main.hs
frontend/jsbits/: main.js
src/: Main.hs
