name:                pdf-foobar
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/cocreature/pdf-foobar
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pdf-foobar
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson
                     , base >=4.9 && <4.10
                     , containers
                     , ghcjs-base
                     , miso >= 0.7.5
  hs-source-dirs:      src
  default-language:    Haskell2010
