name:                pdf-foobar
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/cocreature/pdf-foobar
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pdf-foobar-frontend
  main-is:             Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    build-depends:       aeson
                       , base >=4.8 && <4.12
                       , containers
                       , ghcjs-base
                       , miso >= 0.7.5
    hs-source-dirs:      frontend
    default-language:    Haskell2010
    js-sources:          frontend/jsbits/main.js
    ghc-options:         -Wall

executable pdf-foobar-backend
  main-is:             Main.hs
  if impl(ghcjs)
    buildable: False
  else
    build-depends:       aeson
                       , base >=4.9 && <4.12
                       , bytestring
                       , containers
                       , http-media
                       , optparse-applicative
                       , process
                       , servant >= 0.11
                       , servant-server >= 0.11
                       , servant-multipart >= 0.10 && < 0.12
                       , temporary
                       , text
                       , warp >= 3.2
    hs-source-dirs:      backend
    default-language:    Haskell2010
    ghc-options:         -Wall
